Fixed Whitespace Below 100vh

--- a/src/App.scss
+++ b/src/App.scss
@@ -169,7 +169,7 @@ body{
 }
 
 .fullheight{
-    height: 100vh;
+    min-height: 100vh;
 }
 
 @media (max-width: 480px){
